<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:inputType="number"
        android:id="@+id/edit_dist"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dist"/>
    <TextView

        android:id="@+id/view_totaq"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/totaq"/>
    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_price"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>
    <TextView
        android:id="@+id/view_pricepl"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pricepl"/>
    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_autonomia"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"/>
    <TextView
        android:id="@+id/view_km"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km"/>
    <TextView
        android:id="@+id/view_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gastotl"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="35dp"/>
    <TextView
        android:id="@+id/view_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tl"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#009688"
        android:textSize="30dp"
        android:layout_marginTop="45dp"/>
    <Button

        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_marginTop="60dp"
        android:padding="16dp"

        />


</LinearLayout>